--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ edition = "2024"
 
 [dependencies]
 rand = "0.9.2"
+serde = { version = "1.0", features = ["derive"] }
+serde_derive = "1.0"
+bincode = "1.3"
