--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_derive = "1.0"
 bincode = "1.3"
 tempfile = "3.24.0"
+log = "0.4.29"
+env_logger = "0.11.8"
+test-log = "0.2.19"
